--- a/index.html
+++ b/index.html
@@ -127,7 +127,8 @@
           <tbody>
             <tr>
               <th>07/10/2021</th>
-              <td><a class="actu" href="https://www.db-z.com/zarbon-se-devoile-dans-la-gamme-shfiguarts/" target="_blank">
+              <td><a class="actu" href="https://www.db-z.com/zarbon-se-devoile-dans-la-gamme-shfiguarts/"
+                  target="_blank">
                   Zarbon se dévoile dans la gamme SHFiguarts</a></td>
             </tr>
             <tr>
@@ -137,7 +138,8 @@
             </tr>
             <tr>
               <th>02/09/2021</th>
-              <td><a class="actu" href="  https://www.db-z.com/shfiguarts-freezer-4eme-forme/" target="_blank">SHFiguarts
+              <td><a class="actu" href="  https://www.db-z.com/shfiguarts-freezer-4eme-forme/"
+                  target="_blank">SHFiguarts
                   Freezer (4ème forme)</a></td>
             </tr>
           </tbody>
@@ -154,12 +156,15 @@
           <tbody>
             <tr>
               <th>30/10/2021</th>
-              <td><a class="upgrade" href="#upgradeModal3" data-bs-toggle="modal" data-bs-target="#upgradeModal3">Placement des éléments de la page d'accueil</a></td>
-              <div class="modal fade" id="upgradeModal3" tabindex="-1" aria-labelledby="upgradeModalLabel3" aria-hidden="true">
+              <td><a class="upgrade" href="#upgradeModal3" data-bs-toggle="modal"
+                  data-bs-target="#upgradeModal3">Placement des éléments de la page d'accueil</a></td>
+              <div class="modal fade" id="upgradeModal3" tabindex="-1" aria-labelledby="upgradeModalLabel3"
+                aria-hidden="true">
                 <div class="modal-dialog modal-dialog-centered">
                   <div class="modal-content">
                     <div class="modal-header">
-                      <p class="modal-title m-auto h5" id="upgradeModalLabel3">Placement des éléments de la page d'accueil</p>
+                      <p class="modal-title m-auto h5" id="upgradeModalLabel3">Placement des éléments de la page
+                        d'accueil</p>
                     </div>
                     <div class="modal-body">
                       <ul class="m-0">
@@ -170,7 +175,7 @@
                       </ul>
                     </div>
                     <div class="modal-footer justify-content-center">
-                      <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+                      <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Fermer</button>
                     </div>
                   </div>
                 </div>
@@ -178,8 +183,10 @@
             </tr>
             <tr>
               <th>29/10/2021</th>
-              <td><a class="upgrade" href="#upgradeModal2" data-bs-toggle="modal" data-bs-target="#upgradeModal2">Reprise à zéro du site</a></td>
-              <div class="modal fade" id="upgradeModal2" tabindex="-1" aria-labelledby="upgradeModalLabel2" aria-hidden="true">
+              <td><a class="upgrade" href="#upgradeModal2" data-bs-toggle="modal"
+                  data-bs-target="#upgradeModal2">Reprise à zéro du site</a></td>
+              <div class="modal fade" id="upgradeModal2" tabindex="-1" aria-labelledby="upgradeModalLabel2"
+                aria-hidden="true">
                 <div class="modal-dialog modal-dialog-centered">
                   <div class="modal-content">
                     <div class="modal-header">
@@ -187,10 +194,11 @@
                     </div>
                     <div class="modal-body text-center">
                       <p>Bon, on va pas se mentir, c'était quand même mal barré cette histoire...</p>
-                      <p class="mb-0">Donc on reprend tout depuis le début histoire que ça ressemble quand même à quelque chose !</p>
+                      <p class="mb-0">Donc on reprend tout depuis le début histoire que ça ressemble quand même à
+                        quelque chose !</p>
                     </div>
                     <div class="modal-footer justify-content-center">
-                      <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+                      <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Fermer</button>
                     </div>
                   </div>
                 </div>
@@ -198,8 +206,10 @@
             </tr>
             <tr>
               <th>22/10/2021</th>
-              <td><a class="upgrade" href="#upgradeModal1" data-bs-toggle="modal" data-bs-target="#upgradeModal1">Création du 1er index.html</a></td>
-              <div class="modal fade" id="upgradeModal1" tabindex="-1" aria-labelledby="upgradeModalLabel1" aria-hidden="true">
+              <td><a class="upgrade" href="#upgradeModal1" data-bs-toggle="modal"
+                  data-bs-target="#upgradeModal1">Création du 1er index.html</a></td>
+              <div class="modal fade" id="upgradeModal1" tabindex="-1" aria-labelledby="upgradeModalLabel1"
+                aria-hidden="true">
                 <div class="modal-dialog modal-dialog-centered">
                   <div class="modal-content">
                     <div class="modal-header">
@@ -209,7 +219,7 @@
                       <p class="mb-0">Youhouuuuu !!!!! C'est partiiiiii !!!!!!!</p>
                     </div>
                     <div class="modal-footer justify-content-center">
-                      <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+                      <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Fermer</button>
                     </div>
                   </div>
                 </div>
@@ -221,7 +231,24 @@
     </div>
   </div>
 
-
+  <footer>
+    <div class="container-fluid mb-0 pt-3 pb-1 bg-white">
+      <div class="container">
+        <div class="row text-center pb-3">
+          <div class="col-lg-4 col-5 m-auto">
+            <a class="footLink" href="#">Mentions Légales</a>
+          </div>
+          <div class="col-lg-4 col-4 m-auto">
+            <a class="footLink" href="#">Plan du Site</a>
+          </div>
+          <div class="col-lg-4 col-3 m-auto">
+            <a class="footLink" href="#">Contact</a>
+          </div>
+        </div>
+        <p class="text-center">©2021 DBZ Figure Collection | Designed by TiFlo</p>
+      </div>
+    </div>
+  </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
