Ajout de active sur la navbar pour les liens actifs

--- a/search.html
+++ b/search.html
@@ -63,16 +63,16 @@
             <div class="offcanvas-body container">
                 <ul class="navbar-nav justify-content-around flex-grow-1 pe-3">
                     <li class="nav-item">
-                        <a class="nav-link" href="search.html">RECHERCHE</a>
+                        <a class="nav-link" href="index.html">ACCUEIL</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">MA COLLECTION</a>
+                        <a class="nav-link active fw-bold" href="search.html">RECHERCHE</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">MES VOEUX</a>
+                        <a class="nav-link" href="figure.html">MA COLLECTION</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">FORUM</a>
+                        <a class="nav-link" href="#">MES SOUHAITS</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">A PROPOS</a>
