Ajout Dark mode via un switch

--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
             <a class="nav-link" href="#">MES SOUHAITS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html">A PROPOS</a>
+            <a class="nav-link active fw-bold" href="about.html">A PROPOS</a>
           </li>
         </ul>
         <div class="input-group d-lg-none">
@@ -89,34 +89,16 @@
     </div>
   </nav>
 
-  <div class="container bg-white content pt-3 pb-3 my-5">
-    <div class="row justify-content-center mb-4">
-      <div class="col-lg-6 text-center">
-        <p class="h3 mb-4">Connectez-vous à votre compte</p>
-        <form class="connectForm pt-4">
-          <div class="form-group row pb-3">
-            <label for="mail" class="col-4 form-control-label m-auto">E-mail</label>
-            <div class="col-7">
-              <input class="form-control" type="mail" name="mail" id="mail">
-            </div>
-            <div class="col-1"></div>
-          </div>
-          <div class="form-group row pb-3">
-            <label for="password" class="col-4 form-control-label m-auto">Mot de Passe</label>
-            <div class="col-7">
-              <input class="form-control" type="password" name="password" id="password">
-            </div>
-            <div class="col-1"></div>
-          </div>
-          <p><a href="#" class="pb-3">Mot de passe oublié ?</a></p>
-          <a href="account.html" class="btn redDBZBack rounded-3 text-white pt-2 pb-2 ps-4 pe-4 mb-3">CONNEXION</a>
-          <hr>
-          <p>Pas de compte ? <a href="createAccount.html">Créez-en un !</a></p>
-        </form>
-      </div>
-    </div>
+  <div class="container bg-white content pt-3 pb-3 my-5" id="contentId">
+    <p class="h3 text-center mb-4">A propos de DBZ Figure Collection</p>
+    <p>Tout d'abord, bienvenue sur Dragon Ball Z Figure Collection !</p>
+    <p>Ce site a été créé en 2020-2021 suite à un besoin de stocker une collection existante ainsi qu'une liste de souhaits de figurines.</p>
+    <p>En effet, le site Dragon Ball Z Figure Collection permet non seulement de faire une recherche de toutes les figurines existantes éditées par Banpresto/Bandaï Spirits, mais également (suite à une inscription) de créer votre collection personnelle ainsi que la liste des figurines que vous recherchez.</p>
+    <p>Ces dernières sont affichées sous forme de tableaux et peuvent, selon votre choix, être visible de tous.</p>
+    <p>Cela permet par exemple de pouvoir contacter les personnes qui recherchent une certaine figurine si vous la possédez et que vous souhaitez la vendre. Vous pouvez également indiquer que vous souhaitez vendre cette figurine et ainsi pouvoir être contacté par de potentiels acheteurs.</p>
+    <p>Vous pouvez également exposer vos figurines en ajoutant vos photos personnelles sur la page de la figurine en question.</p>
+    <p>Si vous souhaitez savoir comment faire tout cela, rdv dans la section "Plan du Site" en bas de page.</p>
   </div>
-
   <footer>
     <div class="container-fluid mb-0 pt-3 pb-1 bg-white" id="myFooter">
       <div class="container">
