--- a/account.html
+++ b/account.html
@@ -89,31 +89,31 @@
     </div>
   </nav>
 
-  <div class="container bg-white content pt-3 pb-3 my-5">
+  <div class="container bg-white content pt-3 pb-3 my-5" id="contentId">
     <div class="row justify-content-center mb-4">
       <div class="col-lg-6 text-center">
-        <p class="h3 mb-4">Connectez-vous à votre compte</p>
-        <form class="connectForm pt-4">
-          <div class="form-group row pb-3">
-            <label for="mail" class="col-4 form-control-label m-auto">E-mail</label>
-            <div class="col-7">
-              <input class="form-control" type="mail" name="mail" id="mail">
-            </div>
-            <div class="col-1"></div>
-          </div>
-          <div class="form-group row pb-3">
-            <label for="password" class="col-4 form-control-label m-auto">Mot de Passe</label>
-            <div class="col-7">
-              <input class="form-control" type="password" name="password" id="password">
-            </div>
-            <div class="col-1"></div>
-          </div>
-          <p><a href="#" class="pb-3">Mot de passe oublié ?</a></p>
-          <a href="account.html" class="btn redDBZBack rounded-3 text-white pt-2 pb-2 ps-4 pe-4 mb-3">CONNEXION</a>
-          <hr>
-          <p>Pas de compte ? <a href="createAccount.html">Créez-en un !</a></p>
-        </form>
+        <p class="h3 mb-4">Votre compte</p>
       </div>
+    </div>
+    <div class="row justify-content-around m-0">
+      <a href="#" class="col-lg-3 btn myBtn border text-center my-2">
+        <p><i class="bi bi-person h1"></i></p>
+        <p class="h4">Mes infos</p>
+      </a>
+      <a class="col-lg-3 btn myBtn border text-center my-2">
+        <p><i class="bi bi-table h1"></i></i></p>
+        <p class="h4">Ma Collection</p>
+      </a>
+      <a class="col-lg-3 btn myBtn border text-center my-2">
+        <p><i class="bi bi-heart-fill h1"></i></p>
+        <p class="h4">Mes Souhaits</p>
+      </a>
+    </div>
+    <div class="row justify-content-around m-0">
+      <a href="connexion.html" class="col-lg-3 btn myBtn border text-center my-2">
+        <p><i class="bi bi-power h1"></i></p>
+        <p class="h4">Déconnexion</p>
+      </a>
     </div>
   </div>
 
