--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
     <title>DBZ Figure Collection</title>
 </head>
 
-<body>
+<body class="bg-white">
     <div class="container-fluid bg-white" id="myHeader">
         <div class="container">
             <div class="row">
@@ -25,13 +25,18 @@
                     <a href="index.html"><img class="logo" src="assets/img/logoDBZFC.png"
                             alt="Logo Dragon Ball Z Figure Collection"></a>
                 </div>
-
-                <div class="d-lg-block d-none col-8 m-auto">
+                <div class="d-lg-block d-none col-6 m-auto">
                     <div class="input-group w-75 m-auto">
-                        <input type="search" class="form-control" placeholder="Rechercher une figurine">
-                        <button type="button" class="btn btn-secondary text-white"><i class="bi bi-search"></i></button>
+                      <input type="search" class="form-control" placeholder="Rechercher une figurine">
+                      <button type="button" class="btn btn-secondary text-white"><i class="bi bi-search"></i></button>
                     </div>
-                </div>
+                  </div>
+                  <div class="d-lg-block d-none col-2 m-auto">
+                    <div class="form-check form-switch">
+                      <input class="form-check-input" type="checkbox" role="switch" id="darkSwitch">
+                      <label class="form-check-label" for="darkSwitch">Dark Mode</label>
+                    </div>
+                  </div>
                 <div class="d-lg-none d-block col-4"></div>
                 <div class="col-2 m-auto">
                     <a class="text-decoration-none account d-flex justify-content-end" href="connexion.html"
@@ -66,7 +71,7 @@
                         <a class="nav-link" href="index.html">ACCUEIL</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active fw-bold" href="search.html">RECHERCHE</a>
+                        <a class="nav-link" href="search.html">RECHERCHE</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="figure.html">MA COLLECTION</a>
@@ -75,7 +80,7 @@
                         <a class="nav-link" href="#">MES SOUHAITS</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">A PROPOS</a>
+                        <a class="nav-link" href="about.html">A PROPOS</a>
                     </li>
                 </ul>
                 <div class="input-group d-lg-none">
@@ -86,66 +91,63 @@
         </div>
     </nav>
 
-    <div class="container bg-white content pt-3 pb-3 my-5" id="contentId">
-        <p class="h3 mb-4 text-center">Recherche de figurines</p>
-        <form class="pt-4 mb-4 row">
-            <div class="col-lg-3 col-9 m-auto my-3">
-                <select class="form-select" id="inputGroupSelect01">
-                    <option selected disabled>Recherche par...</option>
-                    <option value="1">Personnage</option>
-                    <option value="2">Série</option>
-                    <option value="3">Année de sortie</option>
-                    <option value="4">Taille</option>
-                </select>
-            </div>
-            <div class="col-lg-3 col-9 m-auto my-3">
-                <select class="form-select" id="inputGroupSelect02">
-                    <option selected disabled>Choix...</option>
-                    <option value="1">Liste des noms</option>
-                    <option value="2">Liste des séries</option>
-                    <option value="3">Liste des années</option>
-                    <option value="4">Taille (entre ... et ...)</option>
-                </select>
-            </div>
-            <div class="col-lg-3 col-9 m-auto my-3">
-                <select class="form-select" id="inputGroupSelect03">
-                    <option selected disabled>Choix...</option>
-                    <option value="1">Formes (Transformations) (Toutes possible)</option>
-                    <option value="2">Série précise (si choix Ichiban Kuji par exemple) (Toutes possible)</option>
-                    <option value="3">Liste des mois (Tous possible)</option>
-                    <option value="4">Taille (entre ... et ...) (Toutes possible)</option>
-                </select>
-            </div>
-            <div class="col-lg-3 m-auto text-center my-3">
-                <button type="button"
-                    class="btn btn-danger rounded-3 text-white pt-2 pb-2 ps-4 pe-4">RECHERCHER</button>
-            </div>
-        </form>
-    </div>
-
-    <footer>
-        <div class="container-fluid mb-0 pt-3 pb-1 bg-white" id="myFooter">
-            <div class="container">
-                <div class="row text-center pb-3">
-                    <div class="col-lg-4 col-5 m-auto">
-                        <a class="footLink" href="#" id="foot1">Mentions Légales</a>
+    <div class="container bg-white content pt-3 pb-3 my-5">
+        <div class="row justify-content-center mb-4">
+            <div class="col-lg-6 text-center">
+                <p class="h3 mb-4">Contact</p>
+                <form class="connectForm pt-4">
+                    <div class="form-group row pb-3">
+                        <label for="name" class="col-4 form-control-label m-auto">Nom</label>
+                        <div class="col-7">
+                            <input class="form-control" type="text" name="name" id="name">
+                        </div>
+                        <div class="col-1"></div>
                     </div>
-                    <div class="col-lg-4 col-4 m-auto">
-                        <a class="footLink" href="#" id="foot2">Plan du Site</a>
+                    <div class="form-group row pb-3">
+                        <label for="mail" class="col-4 form-control-label m-auto">E-mail</label>
+                        <div class="col-7">
+                            <input class="form-control" type="mail" name="mail" id="mail">
+                        </div>
+                        <div class="col-1"></div>
                     </div>
-                    <div class="col-lg-4 col-3 m-auto">
-                        <a class="footLink" href="#" id="foot3">Contact</a>
+                    <div class="form-group row pb-3">
+                        <label for="message" class="col-4 form-control-label m-auto">Votre message</label>
+                        <div class="col-7">
+                            <textarea class="form-control" name="message" id="message"></textarea>
+                        </div>
+                        <div class="col-1"></div>
                     </div>
-                </div>
-                <p class="text-center">©2021 DBZ Figure Collection | Designed by TiFlo</p>
+                    
+                    <button type="button"
+                        class="btn redDBZBack rounded-3 text-white pt-2 pb-2 ps-4 pe-4 mt-3 mb-3">ENVOYER</button>
+                </form>
             </div>
         </div>
-    </footer>
+    </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-    </script>
-    <script src="assets/js/script.js"></script>
+        <footer>
+            <div class="container-fluid mb-0 pt-3 pb-1 bg-white" id="myFooter">
+                <div class="container">
+                    <div class="row text-center pb-3">
+                        <div class="col-lg-4 col-5 m-auto">
+                            <a class="footLink" href="#" id="foot1">Mentions Légales</a>
+                        </div>
+                        <div class="col-lg-4 col-4 m-auto">
+                            <a class="footLink" href="#" id="foot2">Plan du Site</a>
+                        </div>
+                        <div class="col-lg-4 col-3 m-auto">
+                            <a class="footLink" href="contact.html" id="foot3">Contact</a>
+                        </div>
+                    </div>
+                    <p class="text-center">©2021 DBZ Figure Collection | Designed by TiFlo</p>
+                </div>
+            </div>
+        </footer>
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+        </script>
+        <script src="assets/js/script.js"></script>
 </body>
 
 </html>
